# Compiler

./: .gitignore  CMakeLists.txt  Compiler.sln  README.md
Compiler/: Compiler.cpp  Compiler.vcxproj  Compiler.vcxproj.filters  parser.h  scanner.cpp  scanner.h  token.cpp  token.h
Compiler_Lib/: AST.cpp  AST.h  CMakeLists.txt  Compiler_Lib.vcxproj  Compiler_Lib.vcxproj.filters  codegen.cpp  codegen.h  interpreter.cpp  interpreter.h  parser.cpp  parser.h  scanner.cpp  scanner.h  stdafx.h  token.cpp  token.h  visitor.h  visualizer.cpp  visualizer.h
Compiler_Test/: Compiler_Test.vcxproj  ParserTest.cpp  ScannerTest.cpp
Compiler_exe/: CMakeLists.txt  Compiler_exe.cpp  Compiler_exe.vcxproj  Compiler_exe.vcxproj.filters  getopt.cpp  stdafx.cpp
Test programs/: if.simple  main.simple
Test programs/euler/: multiples.simple
test/: test.py
test/Test programs/: for.simple  main.simple  stl.simple
test/Test programs/code generation/: incorrect top structure.simple  unknown funcname.simple  wrong args.simple
test/Test programs/code generation errors/: unknown varname.simple
test/Test programs/complex programs/: mandelbrot.simple
test/Test programs/control flow/: chained if.simple  for.simple  if.simple  nested for.simple  return.simple
test/Test programs/data/: big number.simple  small number.simple  string.simple
test/Test programs/linking/: external.simple
test/Test programs/math/: add.simple  decrement.simple  divide.simple  increment.simple  multiply.simple  negative.simple  remainder.simple  subtract-negative.simple  subtract.simple
test/Test programs/parser/: bad assignment.simple  bad funcname.simple  unexpected body.simple
test/Test programs/parser errors/: bad if.simple  missing body.simple
test/Test programs/scanner/: comments.simple
test/Test programs/scanner errors/: bad input.simple  bad number.simple
